--- a/source/_includes/post/duoshuo.html
+++ b/source/_includes/post/duoshuo.html
@@ -1,29 +1,14 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html>
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta http-equiv="Content-Style-Type" content="text/css">
-  <title></title>
-  <meta name="Generator" content="Cocoa HTML Writer">
-  <meta name="CocoaVersion" content="1187.4">
-  <style type="text/css">
-    p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 18.0px; font: 13.0px Menlo; color: #666666; background-color: #dddddd}
-  </style>
-</head>
-<body>
-<p class="p1">&lt;!-- Duoshuo Comment BEGIN --&gt;</p>
-<p class="p1">&lt;div class="ds-thread"&gt;&lt;/div&gt;</p>
-<p class="p1">&lt;script type="text/javascript"&gt;</p>
-<p class="p1"><span class="Apple-converted-space">  </span>var duoshuoQuery = {short_name:"beyondvincent"};</p>
-<p class="p1"><span class="Apple-converted-space">  </span>(function() {</p>
-<p class="p1"><span class="Apple-converted-space">    </span>var ds = document.createElement('script');</p>
-<p class="p1"><span class="Apple-converted-space">    </span>ds.type = 'text/javascript';ds.async = true;</p>
-<p class="p1"><span class="Apple-converted-space">    </span>ds.src = 'http://static.duoshuo.com/embed.js';</p>
-<p class="p1"><span class="Apple-converted-space">    </span>ds.charset = 'UTF-8';</p>
-<p class="p1"><span class="Apple-converted-space">    </span>(document.getElementsByTagName('head')[0]<span class="Apple-converted-space"> </span></p>
-<p class="p1"><span class="Apple-converted-space">    </span>|| document.getElementsByTagName('body')[0]).appendChild(ds);</p>
-<p class="p1"><span class="Apple-converted-space">  </span>})();</p>
-<p class="p1">&lt;/script&gt;</p>
-<p class="p1">&lt;!-- Duoshuo Comment END --&gt;</p>
-</body>
-</html>
+<!-- Duoshuo Comment BEGIN -->
+<div class="ds-thread"></div>
+<script type="text/javascript">
+    var duoshuoQuery = {short_name:"starfelix"};
+	(function() {
+     var ds = document.createElement('script');
+     ds.type = 'text/javascript';ds.async = true;
+     ds.src = 'http://static.duoshuo.com/embed.js';
+     ds.charset = 'UTF-8';
+     (document.getElementsByTagName('head')[0]
+      || document.getElementsByTagName('body')[0]).appendChild(ds);
+     })();
+	</script>
+<!-- Duoshuo Comment END -->
